Added Documents Table, added create and basic search feature in documents

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10667,7 +10667,29 @@ main {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  background: url("/images/background.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+label {
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.bg-lightblue {
+  background: #9cc5e6eb;
+}
+
+.bg-aliceblue {
+  background: aliceblue;
+}
+
+.mt-fit {
+  margin-top: 5rem;
 }
 
 .nav-transparent {
@@ -10688,6 +10710,19 @@ main {
   margin-top: 5rem;
 }
 
+.dms-btn-primary {
+  background: #3F51B5;
+  color: white;
+  border: 1px solid white;
+  font-weight: 600;
+  letter-spacing: 2px;
+}
+
+.dms-btn-primary:hover {
+  background: #1A237E;
+  color: white;
+}
+
 .content-container {
   /* Azur Lane */
   background: #7F7FD5;
@@ -10700,18 +10735,6 @@ main {
 
 .content-container .dms-btn-container {
   margin: 3rem 7rem;
-}
-
-.content-container .dms-btn-primary {
-  background: #3F51B5;
-  color: white;
-  border: 1px solid white;
-  font-weight: 600;
-  letter-spacing: 2px;
-}
-
-.content-container .dms-btn-primary:hover {
-  background: #1A237E;
 }
 
 .content-container .dms-heading {
