--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -35,6 +35,10 @@ label {
     font-size: 1rem;
 }
 
+.highlighted {
+    background: #ffff7e73;
+}
+
 .bg-lightblue {
     background: #9cc5e6eb;
 }
