Added Disha Files, Reports Page with total documents

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,7 +40,8 @@ label {
 }
 
 .bg-lightblue {
-    background: #9cc5e6eb;
+    // background: #9cc5e6eb;
+    background: #cfe5f7eb;
 }
 
 .bg-aliceblue {
