--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,24 +1,24 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
+@import "~jquery-ui-dist/jquery-ui.css";
 
 main {
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     width: 100vw;
     min-height: 100vh;
-    background: url('/images/background.png');
+    background: url("/images/background.png");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
 }
 
 // main::before{
@@ -54,18 +54,17 @@ label {
 
 .nav-transparent {
     z-index: 99;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .title-image-container {
-    background-image: url('/images/title.jpg');
+    background-image: url("/images/title.jpg");
     background-attachment: fixed;
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
 
     .ongc-logo {
-
         width: 5rem;
         margin-top: 5rem;
     }
@@ -85,14 +84,23 @@ label {
 
 .content-container {
     /* Azur Lane */
-    background: #7F7FD5;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom right, #91EAE4, #86A8E7, #7F7FD5);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom right, #91EAE4, #86A8E7, #7F7FD5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #7f7fd5; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+        to bottom right,
+        #91eae4,
+        #86a8e7,
+        #7f7fd5
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+        to bottom right,
+        #91eae4,
+        #86a8e7,
+        #7f7fd5
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     border: 1px solid white;
 
     .dms-btn-container {
-
         margin: 3rem 7rem;
     }
 
