--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,7 @@
 
 // Variables
 @import "variables";
+@import "table";
 
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
@@ -49,7 +50,7 @@ label {
 }
 
 .mt-fit {
-    margin-top: 5rem;
+    margin-top: 4.2rem;
 }
 
 .nav-transparent {
